fix: fixed weird looking select on ios

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -18,6 +18,6 @@
     font-style: normal;
 }
 
-select:required:invalid {
-    color: gray;
+select {
+    -webkit-appearance: none
 }
